// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeField render() renders 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`RangeField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="range"
      value={2}
    />
  </div>
</div>
`;

exports[`RangeField render() renders with optional attributes 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`RangeField render() renders with value 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="range"
      value={2}
    />
  </div>
</div>
`;
